# columba

./: .auto-claude-status  .claude_settings.json  .codecov.yml  .editorconfig  .envrc.example  .gitignore  .gitmodules  =0.21.0  AUDIO_DEBUG_ANALYSIS.md  CLAUDE.md  CONTEXT.md  FUNDING.yml  LICENSE  LINK_SPEED_PROBE_DESIGN.md  README.md  audit-dispatchers-full.sh  audit-dispatchers.sh  build-and-launch.sh  build.gradle.kts  columba-location-sharing-lxmf-spec.md  columba-location-sharing-ux-spec.md  deploy.sh  detekt-config.yml  dispatcher-audit-report.txt  gradle.properties  obtainium.json  port-deviations.md  settings.gradle.kts
.claude/: memory.db  settings.json
.claude-flow/: .trend-cache.json  CAPABILITIES.md  config.yaml  daemon-state.json
.githooks/: pre-push
.github/: dependabot.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v0.8.0-MILESTONE-AUDIT.md
.swarm/: hnsw.index  hnsw.metadata.json  memory.db  schema.sql
app/: build.gradle.kts  detekt-baseline-debug.xml  detekt-baseline.xml  proguard-rules.pro  test-proguard-rules.pro
data/: build.gradle.kts  detekt-baseline-debug.xml  detekt-baseline.xml
detekt-rules/: build.gradle.kts
docs/: PARENTAL_CONTROLS.md  UserGuide.md  app-store-readiness.md  ble-architecture.md  micron-implementation-plan.md  micron-parser-audit.md  rpc-authentication-shared-instance.md
domain/: build.gradle.kts
gradle/: libs.versions.toml
lxst/: build.gradle.kts
lxst/src/main/cpp/: CMakeLists.txt  lxst_codec2_jni.c  lxst_opus_jni.c
lxst/src/main/cpp/include/codec2/: codec2.h
(+2344 files in other folders)
